# Desafio-I-Informatica-II

./: Desafio I_ Emanuel Velez Arteaga (Informe Preeliminar).docx  Desafio I_ Emanuel Velez Arteaga (Informe).docx
Desafio/: .gitignore  .gitignore.autosave  CMakeLists.txt  main.cpp  pieza.cpp  pieza.h  tablero.h
Desafio_I_Proyecto_Tetris_Emanuel_Velez_Arteaga/: CMakeLists.txt  main.cpp  pieza.cpp  pieza.h  tablero.cpp  tablero.h
main/: CMakeLists.txt  main.cpp
